src/App.css
/* Google Fonts */
@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam:wght@400;600;700;800&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Changa:wght@400;500;600;700&family=Montserrat&family=Staatliches&display=swap');

:root {
  --dark: rgba(28, 29, 33, 1);
  --dark80: rgba(28, 29, 33, .8);
  --dark60: rgba(28, 29, 33, .6);
  --dark40: rgba(28, 29, 33, .4);
  --accent: rgba(247, 92, 3, 1);
  --accent-variation: rgba(227, 72, 3, 1);
  --alt: rgba(117, 109, 84, 1);
  --alt80: rgba(117, 109, 84, .8);
  --alt60: rgba(117, 109, 84, .6);
  --alt40: rgba(117, 109, 84, .4);
  --alt2: rgba(80, 80, 65, 1);
  --alt3: rgba(70, 70, 60, 1);
  --light: rgba(197, 216, 209, 1);
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html, body {
  height: 100%;
  overflow: hidden;
}

.app {
  height: 100%;
  display: grid;
  grid-template-columns: 35vw 1fr;
  user-select: none;
  background-color: black;
}

.page-background {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: auto;
  opacity: 0.4;
  transition: 2s;
}

/* SIDEBAR */

.sidebar {
  display: grid;
  grid-column: 1;
  height: 100vh;
  position: relative;
  z-index: 2;
}

.sidebar-bg {
  display: flex;
  position: absolute;
  flex-direction: column;
  left: 0;
  top: 0;
  bottom: 0;
  background-color: var(--dark40);
}

.b1 {
  right: 0px;
}

.b2 {
  right: 16px;
}

.b3 {
  right: 32px;
}

.sidebar-container {
  /* Dark background */
  position: absolute;
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;

  /* ---- */
  padding: 16px 32px 32px 32px;
}

.sidebar-back {
  font-family: 'Be Vietnam', sans-serif;
  font-size: 1.3vw;
  padding-left: 2vw;
  padding-top: 1vh;
  font-weight: 400;
  color: var(--alt);
  display: flex;
  text-decoration: none;
  transition: .3s;
}

.sidebar-back:hover {
  color: var(--accent);
}

.sidebar-title {
  font-family: 'Be Vietnam', sans-serif;
  font-size: 7vw;
  font-weight: 700;
  line-height: .68;
  color: var(--accent);
  
  margin-top: 6vh;
  padding-left: 2vw;
  margin-bottom: 16vh;
}

.gamelist {
  font-family: 'Be Vietnam', sans-serif;
  font-size: 2vw;
  font-weight: 600;
  text-transform: uppercase;
  line-height: 1.5;
  list-style-type: none;
  padding-left: 1vw;
}

.gamelist-item {
  transition: .3s;
}

.gamelist-link {
  text-decoration: none;
  color: var(--light);
  transition: .3s;
  cursor: pointer;
  padding-left: 1vw;
}

.gamelist-link:hover {
  color: var(--accent);
}

.gamelist-toggled {
  padding-left: 1vw;
  background-color: var(--alt40);
}


/* CONTENT */

.content {
  margin: 6vh;
  font-family: 'Changa', sans-serif;
  color: var(--light);
  z-index: 2;
}

.content-title {
  font-size: 5.5vw;
  line-height: 0.8;
  font-weight: 800;
  text-transform: uppercase;
  text-shadow: 2px 2px black;
}

.content-short-description {
  font-size: 1.6vw;
  font-weight: 500;
  text-shadow: 1px 1px black;
}

.content-long-description {
  font-size: 1.5rem;
  line-height: 1;
  padding-bottom: 1vw;
  margin-left: 32px;
  margin-right: 32px;
  font-weight: 500;
  text-shadow: 1px 1px black;
}

.content-image {
  display: block;
  margin-left: auto;
  margin-right: auto;
  height: 30rem;
  padding-top: 1vw;
  padding-bottom: 3vw;
}

.button {
	box-shadow: 3px 4px 0px 0px var(--dark);
  border-radius: 5px;
  width: 16vw;
  height: 6vh;
	display: inline-block;
	cursor: pointer;
	color: var(--light);
  font-size: 1.8vh;
  text-align: center;
	font-weight: 800;
	padding-top: 1.3vh;
	text-decoration: none;
  text-shadow: 0px 1px 0px var(--alt);
  margin-right: 16px;
}

.button:active {
	position:relative;
	top:1px;
}

.cta {
  background: linear-gradient(to bottom, var(--accent) 5%, var(--accent-variation) 100%);
  border: 1px solid var(--accent-variation);
	background-color: var(--accent);
}

.cta:hover {
	background:linear-gradient(to bottom, var(--accent-variation) 5%, var(--dark40) 100%);
	background-color:var(--accent);
}

.normal {
  background: linear-gradient(to bottom, var(--alt3) 5%, var(--alt2) 100%);
  border: 1px solid var(--dark80);
	background-color: var(--dark40);
}

.normal:hover {
	background:linear-gradient(to bottom, var(--alt3) 5%, var(--dark40) 100%);
	background-color:var(--alt2);
}

.buttons {
  margin-top: 6vh;
  width: 100%;
  display: flex;
  justify-content: center;
}

